--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "my-awesome-project": {
@@ -121,8 +121,16 @@
               "devServerTarget": "my-awesome-project:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
-  "defaultProject": "my-awesome-project"
+    }
+  },
+  "defaultProject": "my-awesome-project",
+  "cli": {
+    "analytics": "1b290eac-ae8a-49eb-a7cf-75b5376b66c3"
+  }
 }
