--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "codelyzer": "^5.1.2",
     "firebase-tools": "^7.12.0",
     "fuzzy": "^0.1.3",
+    "husky": "4.2.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.5.0",
