--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
+    "tslint-config-prettier": "1.18.0",
     "typescript": "~3.7.5"
   },
   "husky": {
