--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "tslint-config-prettier": "1.18.0",
+    "tslint-plugin-prettier": "2.2.0",
     "typescript": "~3.7.5"
   },
   "husky": {
